configuration/ingress-manifests.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: potato-facts
  name: potato-facts-external
  namespace: borealis-prod-eu

spec:
  ports:
  - name: gate-tcp
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: potato-facts
  type: ClusterIP #NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: potato-facts
  name: potato-facts-preview
  namespace: borealis-prod-eu
spec:
  ports:
  - name: gate-tcp
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: potato-facts-preview
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: borealis-prod-eu
  annotations: 
    nginx.org/mergeable-ingress-type: master
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #    - a34d3aaf6283e4c36b7563ee321c9673-194964128.us-east-2.elb.amazonaws.com
  rules:
    - host: a34d3aaf6283e4c36b7563ee321c9673-194964128.us-east-2.elb.amazonaws.com

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-paths
  namespace: borealis-prod-eu
  annotations: 
    nginx.org/mergeable-ingress-type: minion
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
    - host: a34d3aaf6283e4c36b7563ee321c9673-194964128.us-east-2.elb.amazonaws.com
      http:
        paths:
          - pathType: Prefix
            path: "/borealis-demo-preview"
            backend:
              service:
                name: potato-facts-preview
                port:
                  number: 80
          - pathType: Prefix
            path: "/borealis-demo"
            backend:
              service:
                name: potato-facts-external
                port:
                  number: 80
