configuration/kubecost-ingress-manifests.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-kubecost-2
  namespace: kubecost
  annotations: 
    nginx.org/mergeable-ingress-type: minion
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/kubecost)$ $1/ permanent;
    #nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
    - host: a34d3aaf6283e4c36b7563ee321c9673-194964128.us-east-2.elb.amazonaws.com
      http:
        paths:
          - pathType: Prefix
            path: /kubecost2(/|$)(.*)
            backend:
              service:
                name: kubecost-cost-analyzer
                port:
                  number: 9090
